Add book year segregation