@@ -2,6 +2,7 @@ package be.jonasboon.book_keeping_tool.domain.transactions.service;
 
 import be.jonasboon.book_keeping_tool.domain.cost_centers.service.CostCenterService;
 import be.jonasboon.book_keeping_tool.domain.transactions.DTO.TransactionDTO;
+import be.jonasboon.book_keeping_tool.domain.transactions.entity.Transaction;
 import be.jonasboon.book_keeping_tool.domain.transactions.mapper.TransactionMapper;
 import be.jonasboon.book_keeping_tool.domain.transactions.processor.TransactionFileStrategy;
 import be.jonasboon.book_keeping_tool.domain.transactions.repository.TransactionRepository;
@@ -12,8 +13,14 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.time.LocalDate;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
+
+import static be.jonasboon.book_keeping_tool.utils.BookYearUtils.endExclusiveOf;
+import static be.jonasboon.book_keeping_tool.utils.BookYearUtils.startOf;
 
 
 @Slf4j
@@ -34,14 +41,41 @@ public class TransactionService {
                 .collect(Collectors.toList());
     }
 
-    public List<TransactionDTO> processTransactionUpload(MultipartFile file) {
-        transactionRepository.deleteAll(); entityManager.flush();
-        costCenterService.resetAllTotalAmounts();
-        transactionRepository.saveAll(transactionFileStrategy.process(file, "xlsx"));
-        return transactionRepository.findAll().stream().map(transactionMapper::from).toList();
+    public List<TransactionDTO> getTransactionsForBookYear(Integer bookYear) {
+        if (bookYear == null) {
+            return getAllTransactions();
+        }
+        return transactionRepository.findByBookDateGreaterThanEqualAndBookDateLessThan(startOf(bookYear), endExclusiveOf(bookYear)).stream()
+                .map(transactionMapper::from)
+                .collect(Collectors.toList());
     }
 
-    public List<TransactionDTO> loadAssigned(List<TransactionDTO> transactions) {
+    public List<Integer> getAvailableBookYears() {
+        return transactionRepository.findAll().stream()
+                .map(Transaction::getBookDate)
+                .map(LocalDate::getYear)
+                .distinct()
+                .sorted(Comparator.reverseOrder())
+                .toList();
+    }
+
+    public List<TransactionDTO> processTransactionUpload(MultipartFile file) {
+        List<Transaction> transactions = transactionFileStrategy.process(file, "xlsx");
+        Set<Integer> uploadedBookYears = transactions.stream()
+                .map(Transaction::getBookDate)
+                .map(LocalDate::getYear)
+                .collect(Collectors.toSet());
+
+        uploadedBookYears.forEach(this::deleteTransactionsForBookYear);
+        entityManager.flush();
+
+        List<Transaction> savedTransactions = transactionRepository.saveAll(transactions);
+        entityManager.flush();
+        costCenterService.updateTotalAmounts(getAllTransactions());
+        return savedTransactions.stream().map(transactionMapper::from).toList();
+    }
+
+    public List<TransactionDTO> loadAssigned(List<TransactionDTO> transactions, Integer bookYear) {
         transactionRepository.saveAll(
                 transactions.stream()
                         .filter(TransactionDTO::hasNoEmptyField)
@@ -49,8 +83,12 @@ public class TransactionService {
                         .toList()
         );
         entityManager.flush();
-        costCenterService.updateTotalAmounts(transactions);
-        return transactionRepository.findAll().stream().map(transactionMapper::from).toList();
+        costCenterService.updateTotalAmounts(getAllTransactions());
+        return getTransactionsForBookYear(bookYear);
+    }
+
+    private void deleteTransactionsForBookYear(Integer bookYear) {
+        transactionRepository.deleteByBookDateGreaterThanEqualAndBookDateLessThan(startOf(bookYear), endExclusiveOf(bookYear));
     }
 
 }
